--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = moon_defence
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.gdMoonDefence
+PRODUCT_BUNDLE_IDENTIFIER = dev.xsoulspace.moonDefence
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2021 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2021 dev.xsoulspace. All rights reserved.
